--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,15 @@
       <img src="./images/profile.jpg">
     </div>
     <div class="right-side">
-      I'm a master student at
+      I'm a master student at the
       <a href="https://imc.uc.cl/" target="_blank">Instituto de Ingeniería Matemática y Computacional</a>
       in Pontificia Universidad Católica de Chile,
       working in <strong>operator learning</strong>.
       <p>
       On my free time I delve into the mathematical aspects of nice applications, mostly
       in <strong>geometry processing</strong>.
+      <p>
+      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDJzXWzX8JYSYaa0kbrOfzMAeqQDeXwMWH0d5Q6BjuddZ4?e=EmHzOd" target="_blank">CV (in spanish)</a>
     </div>
   </div>
 </section>
@@ -34,17 +36,6 @@
       <img src="images/{{ image }}.png"/>
     </a>
   </div>
-  {% endfor %}
-</div>
-</section>
-
-<section id="math-adventures">
-<h1>Math Adventures</h1>
-<div class="math-list">
-  {% for title, filename in [
-    ('[🚧] Simplicial Homology and Cohomology', 'simplicial_homology_and_cohomology'),
-  ]%}
-  <a href="math/{{ filename }}.html">{{ title }}</a>
   {% endfor %}
 </div>
 </section>
