--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,9 +7,9 @@
   <title>Sebastián Sánchez</title>
 </head>
 <body>
-<header>
-  <a href="index.html">Home</a>
-</header>
+<!-- <header> -->
+<!--   <a href="index.html">Home</a> -->
+<!-- </header> -->
 {% block body %}{% endblock %}
 <footer>
   <div class="footer-left">
