--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,21 @@
 <section id="bio-section">
   <div class="bio">
     <div class="left-side">
-      <img src="./images/profile.jpg">
+      <img src="./images/profile2.jpg">
     </div>
     <div class="right-side">
-      I'm a master student at the
-      <a href="https://imc.uc.cl/" target="_blank">Instituto de Ingeniería Matemática y Computacional</a>
-      in Pontificia Universidad Católica de Chile,
-      working in <strong>operator learning</strong>.
       <p>
-      On my free time I delve into the mathematical aspects of nice applications, mostly
-      in <strong>geometry processing</strong>.
+      Welcome to my website, here you will find the mathematical aspects of
+      nice applications, mostly in <strong>geometry processing</strong>.
+      </p>
+
       <p>
-      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDJzXWzX8JYSYaa0kbrOfzMAeqQDeXwMWH0d5Q6BjuddZ4?e=EmHzOd" target="_blank">CV (in spanish)</a>
+      I have a Master's degree in applied math (<a href="">thesis</a>) 
+      and a Bachelor's degree in pure math.
+      </p>
+
+      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDhaR6wt5tORI4oJCgZaJWfATFwpMnW_hKhTQ5DoJEL5yQ?e=1ldxvB" target="_blank">CV (spanish)</a>
+      <a href="https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDbNrlHv6vzQahEQlJMHGZ8AUBb41HDd6Bzt9pXX4rZ6T8?e=gAnfCt">CV (english) </a>
     </div>
   </div>
 </section>
@@ -25,7 +28,6 @@
 <h1>Coding Adventures</h1>
 <div class ="gallery">
   {% for title, filename, image in [
-    ('[🚧] Poisson Surface Reconstruction', 'PoissonSurfaceRecon', 'placeholder'),
     ('Model View Projection', 'ModelViewProjection', 'ModelViewProjection'),
     ('The Heat Method for Distance Computation', 'HeatMethod', 'HeatMethodBackup'),
     ('Discrete Laplacian on Triangle Meshes', 'DiscreteLaplacian', 'DiscreteLaplacian')
@@ -40,6 +42,18 @@
 </div>
 </section>
 
+<section id="math-adventures">
+<h1>Math adventures</h1>
+<div class="math-list">
+  {% for title, filename in [
+    ('Understanding Logistic Regression', 'logistic_regression'),
+  ]%}
+    <a href="math/{{ filename }}.html">
+      <p>{{ title }}</p>
+    </a>
+  {% endfor %}
+</div>
+</section>
 </main>
 {% endblock %}
 
