--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -20,7 +20,6 @@ main {
   margin: auto;
   grid-template-areas:
   "B B B"
-  "C C M"
   "C C M";
   justify-content: space-evenly;
 }
@@ -78,26 +77,26 @@ main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-evenly;
+  justify-content: start; 
   gap: 1em;
 }
 
 .gallery-item {
   display: flex;
   flex-direction: column;
-  width: 40%;
+  width: 30%;
+  aspect-ratio: 1/1;
   border: 2px ridge darkcyan;
 }
 
 .gallery-item img {
   width: 100%;
-  height: 200px;
+  height: 100%;
 }
 
 .gallery-item  p {
   font-size: medium;
   display: flex;
-  font-size: large;
   align-items: center;
   justify-content: center;
   margin: 0;
