--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -29,9 +29,6 @@ main {
   display: grid;
   grid-template-columns: 1fr 3fr;
   width: 100%;
-  height: 30%;
-  justify-items: center;
-  align-items: center;
 }
 
 .bio a {
@@ -43,11 +40,11 @@ main {
   flex-direction: column;
   gap: .5em;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .bio > .left-side > img {
-  width: 55%;
+  width: 50%;
   border-radius: 50%;
   border: 2px solid gray;
 }
