add bitmap project to software dev

--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,14 @@
             ),
             'YoungTableauxOuterSums',
             'https://github.com/sebastian-sanchez-s/IPI-23-2211'
-          )
+          ),
+          ( 'Bitmap library in C',
+            (
+              'A simple library to create bmp images with multiple header versions. Aimed to my learning process of image processing.',
+            ),
+          'Bitmap',
+          'https://github.com/sebastian-sanchez-s/BitMap'
+          ),
         ]%}
           <div class="project-list-item" >
             <div class="project-list-item-description">
