--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
 
     <p>
     I use this website to publish the projects I have worked on
-    math &cup; compsci &cup; software development.
+    math &cup; compsci &cup; software.
     </p>
 
     <p>
@@ -41,14 +41,16 @@
   --<cite>Vladimir I. Arnold</cite>
   </blockquote>
 
+  <div class="adventures-navbar">
+    <div>
+      <button>Coding</button>
+      <button>Math</button>
+      <button>Software</button>
+    </div>
+  </div>
 
-  <ul class="carousel">
-    <li class="adventures">
-      <div class="adventures-header">
-        <button><i class="fa-solid fa-arrow-left"></i></button>
-        <h1>Coding Adventures</h1>
-        <button><i class="fa-solid fa-arrow-right"></i></button>
-      </div>
+  <ul class="adventures">
+    <li class="adventure">
       <div class ="gallery">
         {% for display_title, project_name, cover_name in [
           ('Animaciones de Wasserstein', 'WassersteinAnimation', 'WassersteinAnimation'),
@@ -64,88 +66,43 @@
       </div>
     </li>
 
-    <li class="adventures">
-      <div class="adventures-header">
-        <button><i class="fa-solid fa-arrow-left"></i></button>
-        <h1>Math Adventures</h1>
-        <button><i class="fa-solid fa-arrow-right"></i></button>
-      </div>
-      <div class="project-list">
-        {% for display_title, description, project_name, href in [
+    {# List type adventures, must follow the order of the navbar #}
+    {% for adventure_section in
+      (
+        (
           ( 'Derivation of the Logistic Regression formula', 
-            (
-              'If you are like me, you must hate the "shut up and calculate" mantra.'
-              ' In this document I introduce the categorization problem from data, and in its formalization an optimization problem arises that give us very naturally the characteristic formula used in logistic regression.',
-            ),
             'LogisticRegression',
             'math/LogisticRegression/LogisticRegression.html'
           ),
           ( 'Approximation Theory for Continuous Operators and its Application to the Operator Learning Problem',
-            (
-              'This is my master\'s thesis, supervised by <a href="https://federicofuentes.github.io/" target="_blank">Ph.D. Federico Fuentes Caycedo</a>.',
-              'The usual treatment of operator learning focuses on the amount and quality of training data to maximize identification in the least number of epochs. The objective of this document is to complement the literature by reviewing the theory underlying operator approximation, validating error estimates with numerical experiments and extracting features from approximants. Through the review, we formalized incomplete and unclear proofs, extended results, and propose nuanced questions to guide future research.',
-              'The following <a href="https://github.com/sebastian-sanchez-s/OperatorLearning" target="_blank">github repository</a> contains some of the code generated through this thesis.'
-            ),
             'MasterThesis',
             'https://uccl0-my.sharepoint.com/:b:/g/personal/slsanchez_uc_cl/IQDpc1TxThaYSYNLo1uX14hwAdn7O0o0K3sq7dAP7M7bziI?e=U2ct7a',
           ),
           ( 'Wave Scattering Through a Ball',
-            (
-              'Imagine a planar acoustic wave traveling through the air and colliding with a ball fill with water. How does the wave behave on this impact? I derived analytical solutions for this problem.',
-              'The document is part of a summer undergrad research project (roughly 2 months) at Pontificia Universidad Católica de Chile supervised by <a href="https://www.ing.uc.cl/academicos-e-investigadores/elwin-van-t-wout/" target="_blank">Ph.D. Elwin Van\'t Wout</a>, and the code is now part of the <a href="https://github.com/optimuslib/optimus" target="_blank">OptimusLib</a> software for 3D wave scattering.',
-              'Please refer to the <a href="https://github.com/sebastian-sanchez-s/IPV-23-2801" target="_blank">github repository</a> for details and better visualization, since the conversion to html is not that great.',
-            ),
             'WaveScattering',
             'math/WaveScattering/WaveScattering.html',
           ),
-        ]%}
-          <div class="project-list-item" >
-            <div class="project-list-item-description">
-              <h1><a href="{{ href }}">{{ display_title }}</a></h1>
-              {% for p in description %}
-              <p>{{ p }}</p>
-              {% endfor %}
-            </div>
-            <a class="project-list-item-img" href="{{ href }}">
-              <img src="covers/{{ project_name }}.png"/>
-            </a>
-          </div>
-        {% endfor %}
-      </div>
-    </li>
-
-    <li class="adventures">
-      <div class="adventures-header">
-        <button><i class="fa-solid fa-arrow-left"></i></button>
-        <h1>Software Development Adventures</h1>
-        <button><i class="fa-solid fa-arrow-right"></i></button>
-      </div>
-      <div class="project-list">
-        {% for display_title, description, project_name, href in [
+        ),
+        (
           ( 'Which Young tableaux can represent an outer sum?',
-            (
-              'A Young Tableaux is grid of numbers such that every cell is greater than the cell to the right and to the bottom.'
-              ' In this project, I developed and implemented an algorithm to massively compute Young Tableaux that can be represented by outer sums of vectors based on a LP algorithm developed by Colin Mallows and Robert J. Vanderbei.',
-              'This project was developed during a winter undergrad research project (roughly a month) at Pontificia Universidad Católica de Chile supervised by <a href="https://www.mat.uc.cl/~federico.castillo/" target="_blank">Ph.D. Federico Castillo Castillo</a>.'
-              ' Please refer to the <a href="https://github.com/sebastian-sanchez-s/IPI-23-2211">github repository</a> for details.',
-            ),
             'YoungTableauxOuterSums',
             'https://github.com/sebastian-sanchez-s/IPI-23-2211'
           ),
           ( 'Bitmap library in C',
-            (
-              'A simple library to create bmp images with multiple header versions. Aimed to my learning process of image processing.',
-            ),
-          'Bitmap',
-          'https://github.com/sebastian-sanchez-s/BitMap'
+            'Bitmap',
+            'https://github.com/sebastian-sanchez-s/BitMap'
           ),
-        ]%}
+        ),
+      )
+    %}
+
+    <li class="adventure">
+      <div class="project-list">
+        {% for display_title, project_name, href in adventure_section %}
           <div class="project-list-item" >
             <div class="project-list-item-description">
               <h1><a href="{{ href }}" target="_blank">{{ display_title }}</a></h1>
-              {% for p in description %}
-              <p>{{ p }}</p>
-              {% endfor %}
+              {% include "desc/"~project_name~".html" %}
             </div>
             <a class="project-list-item-img" href="{{ href }}">
               <img src="covers/{{ project_name }}.png"/>
@@ -154,29 +111,49 @@
         {% endfor %}
       </div>
     </li>
+    {% endfor %}
   </ul>
 </main>
 
 <script>
-  const carousel = document.querySelector(".carousel");
+  const adventuresNav = document.querySelector(".adventures-navbar");
+  const buttons = adventuresNav.querySelectorAll("button");
+  const adventures = document.querySelectorAll(".adventure");
 
-  let currCarouselIndex = 0;
+  let lastIndex = 0;
+  buttons[lastIndex].style.background = "rgba(255, 255, 255, 0.2)";
 
-  function scrollIntoView(increment) {
-    increment = Math.min(Math.max(increment, -1), 1);
-    currCarouselIndex = (currCarouselIndex + increment) % carousel.children.length;
-    currCarouselIndex = Math.min(Math.max(currCarouselIndex, 0), carousel.children.length);
-    carousel.children[currCarouselIndex].scrollIntoView({behavior: "smooth"});
+  function updateNavBar(newIndex) {
+      buttons[lastIndex].style.background = "black";
+      buttons[newIndex].style.background = "rgba(255, 255, 255, 0.2)";
+
+      lastIndex = newIndex;
   }
 
-  for(const button of carousel.querySelectorAll("button")){
-    if( button.children[0].className.includes("left") ){
-      button.addEventListener("click", () => scrollIntoView(-1));
-    }
-    else if( button.children[0].className.includes("right") ){
-      button.addEventListener("click", () => scrollIntoView(1));
-    }
+
+  for(let i=0; i<buttons.length; i++){
+    buttons[i].addEventListener("click", () => {
+      adventures[i].scrollIntoView({behavior: "smooth"});
+
+      updateNavBar(i);
+    });
   }
+
+  const adventureContainer = document.querySelector(".adventures");
+
+  function isVisible(element) {
+    const rect = element.getBoundingClientRect();
+    return rect.left >= 0 && rect.right <= (window.innerWidth || document.documentElement.clientWidth);
+  }
+
+  adventureContainer.addEventListener("scroll", (e) => {
+    for( let i=0; i < adventures.length; i++) {
+      if( isVisible(adventures[i]) ){
+        updateNavBar(i);
+        break;
+      }
+    }
+  });
 </script>
 
 {% endblock %}
