django project and typos

--- a/templates/desc/WaveScattering.html
+++ b/templates/desc/WaveScattering.html
@@ -8,7 +8,7 @@ problem.
 The document is part of a summer undergrad research project (roughly 2 months)
 at Pontificia Universidad Católica de Chile supervised by 
 <a href="https://www.ing.uc.cl/academicos-e-investigadores/elwin-van-t-wout/"
-target="_blank">Ph.D. Elwin Van\'t Wout</a>, and the code is now part of the <a
+target="_blank">Ph.D. Elwin Van't Wout</a>, and the code is now part of the <a
 href="https://github.com/optimuslib/optimus"
 target="_blank">OptimusLib</a> software for 3D wave scattering.
 </p>
