--- a/templates/desc/YoungTableauxOuterSums.html
+++ b/templates/desc/YoungTableauxOuterSums.html
@@ -10,7 +10,10 @@ This project was developed during
 a winter undergrad research project (roughly a month) at Pontificia
 Universidad Católica de Chile supervised by <a
 href="https://www.mat.uc.cl/~federico.castillo/" target="_blank">Ph.D.
-Federico Castillo Castillo</a>.' Please refer to the <a
+Federico Castillo Castillo</a>.
+</p>
+<p>
+Please refer to the <a
 href="https://github.com/sebastian-sanchez-s/IPI-23-2211">github
 repository</a> for details.
 </p>
