--- a/templates/index.html
+++ b/templates/index.html
@@ -84,6 +84,10 @@
           ),
         ),
         (
+          ( 'Django Survey (in progress)',
+            'DjangoSurveyApp',
+            'https://github.com/sebastian-sanchez-s/MEBA'
+          ),
           ( 'Which Young tableaux can represent an outer sum?',
             'YoungTableauxOuterSums',
             'https://github.com/sebastian-sanchez-s/IPI-23-2211'
@@ -104,7 +108,7 @@
               <h1><a href="{{ href }}" target="_blank">{{ display_title }}</a></h1>
               {% include "desc/"~project_name~".html" %}
             </div>
-            <a class="project-list-item-img" href="{{ href }}">
+            <a class="project-list-item-img" href="{{ href }}" target="_blank">
               <img src="covers/{{ project_name }}.png"/>
             </a>
           </div>
